codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_cross_thread_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 80)"
---

  是 否 要 运 行 以 下 命 令 ？

  会 话 ： Robie [explorer]

  $ echo hi

› 1. 是 ， 继 续  (y)
  2. 否 ， 并 告 诉  Codex 应 如 何 调 整  (esc)

  按  enter 确 认 ， 或 按  esc 取 消 ， 或 按  o 打 开 会 话
