codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_permissions_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "normalize_snapshot_paths(render_overlay_lines(&view, 120))"
---

  是 否 授 予 这 些 权 限 ？

  原 因 ： need workspace access

  权 限 规 则 ： 网 络 ; 读 取  `/tmp/readme.txt`; 写 入  `/tmp/out.txt`

› 1. 是 ， 为 本 轮 授 予 这 些 权 限  (y)
  2. 是 ， 为 本 轮 授 权 并 启 用 严 格 自 动 审 查  (r)
  3. 是 ， 为 此 会 话 授 予 这 些 权 限  (a)
  4. 否 ， 不 授 予 权 限 并 继 续  (d)

  按  enter 确 认 ， 或 按  esc 取 消
